--- a/part-3/style.css
+++ b/part-3/style.css
@@ -21,12 +21,6 @@ a:hover {
   color: red;
 }
 
-/*.giant-container {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}*/
-
 .header-container {
   background-color: red;
   border: 1px solid black;
@@ -52,12 +46,11 @@ a:hover {
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-between;
-  /*overflow-y: auto;*/
-  position: relative;
 }
 
 .navbar-container {
   align-items: center;
+  border-bottom: 1px solid black;
   display: flex;
   flex: 0 0 14em;
   flex-direction: column;
@@ -127,7 +120,6 @@ a:hover {
   max-width: 70px;
 }
 
-
 .name {
   flex-basis: 50px;
 }
@@ -136,8 +128,11 @@ a:hover {
   flex-grow: 2;
 }
 
+.footer-container {
+  border: 1px solid black;
+}
+
 .rights {
-  background-color: rgb(155, 162, 178);
   font-size: 12px;
   height: 30px;
   text-align: center;
@@ -150,5 +145,8 @@ a:hover {
   .main-container {
     flex: 1;
     flex-direction: row;
+  }
+  .navbar-container {
+    border: 0;
   }
 }
