--- a/part-3/style.css
+++ b/part-3/style.css
@@ -1,10 +1,5 @@
-html {
-  height: 100%;
-}
-
 body {
   font-family: helvetica, sans-serif;
-  height: 100%;
   margin: 0;
 }
 
@@ -38,7 +33,8 @@ a:hover {
 .header-logout {
   background-color: #fff;
   border-radius: 5px;
-  margin: 2px;
+  font-size: 16px;
+  padding: 0 20px;
 }
 
 .main-container {
@@ -56,7 +52,6 @@ a:hover {
   flex-direction: column;
   justify-content: flex-start;
   order: -1;
-  overflow-y: auto;
 }
 
 .navbar-header {
@@ -78,8 +73,7 @@ a:hover {
 
 .movie-container {
   border-left: 1px solid black;
-  flex-grow: 6;
-  /*overflow-y: auto;*/
+  flex-grow: 1;
 }
 
 .movie-title {
@@ -143,7 +137,6 @@ a:hover {
 
 @media (min-width: 600px) {
   .main-container {
-    flex: 1;
     flex-direction: row;
   }
   .navbar-container {
